// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for createAppd monitoring source Component renders in edit mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main tabWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_setup-sources_0"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="0"
          id="bp3-tab-title_setup-sources_0"
          role="tab"
          tabindex="0"
        >
          Tab1
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_setup-sources_0"
        class="bp3-tab-panel"
        id="bp3-tab-panel_setup-sources_0"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main formFullheight"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  cv.healthSource.connectors.AppDynamics.applicationsAndTiers
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <div
                        class="bp3-form-group applicationDropdown"
                        data-id="appdApplication-0"
                      >
                        <label
                          class="bp3-label"
                          for="appdApplication"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="appDHealthSourceform_appdApplication"
                          >
                            cv.healthSource.connectors.AppDynamics.applicationLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-search StyledProps--main"
                                      icon="search"
                                    >
                                      <svg
                                        data-icon="search"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          search
                                        </desc>
                                        <path
                                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="appdApplication"
                                  placeholder="- cv.healthSource.connectors.AppDynamics.applicationPlaceholder -"
                                  style="padding-left: 0px; padding-right: 0px;"
                                  type="text"
                                  value="Harness-Dev"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-cross StyledProps--main"
                                      icon="cross"
                                    >
                                      <svg
                                        data-icon="cross"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          cross
                                        </desc>
                                        <path
                                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <div
                        class="bp3-form-group tierDropdown"
                        data-id="appDTier-1"
                      >
                        <label
                          class="bp3-label"
                          for="appDTier"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="appDHealthSourceform_appDTier"
                          >
                            cv.healthSource.connectors.AppDynamics.trierLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-search StyledProps--main"
                                      icon="search"
                                    >
                                      <svg
                                        data-icon="search"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          search
                                        </desc>
                                        <path
                                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="appDTier"
                                  placeholder="- cv.healthSource.connectors.AppDynamics.tierPlaceholder -"
                                  style="padding-left: 0px; padding-right: 0px;"
                                  type="text"
                                  value="manager"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-cross StyledProps--main"
                                      icon="cross"
                                    >
                                      <svg
                                        data-icon="cross"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          cross
                                        </desc>
                                        <path
                                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center; cursor: pointer;"
                      >
                        <span
                          class="bp3-icon bp3-icon-issue StyledProps--main StyledProps--padding-right-xsmall"
                          icon="issue"
                        >
                          <svg
                            data-icon="issue"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              issue
                            </desc>
                            <path
                              d="M8 16A8 8 0 118 0a8 8 0 010 16zm0-2A6 6 0 108 2a6 6 0 000 12zm1-2H7v-2h2v2zm0-3H7V4h2v5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        cv.monitoringSources.appD.noData
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  metricPacks
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      cv.healthSource.connectors.AppDynamics.metricPackLabel
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="metricData.Errors-2"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="StyledProps--font StyledProps--main metricPack"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="metricData.Errors-3"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <label
                                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                >
                                  <input
                                    name="metricData.Errors"
                                    type="checkbox"
                                  />
                                  <span
                                    class="bp3-control-indicator"
                                  />
                                  <span
                                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                    data-tooltip-id="appDHealthSourceform_metricData.Errors"
                                  >
                                    Errors
                                  </span>
                                </label>
                              </div>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="metricData.Performance-4"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <label
                                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                >
                                  <input
                                    name="metricData.Performance"
                                    type="checkbox"
                                  />
                                  <span
                                    class="bp3-control-indicator"
                                  />
                                  <span
                                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                    data-tooltip-id="appDHealthSourceform_metricData.Performance"
                                  >
                                    Performance
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main footerCta footer"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    submit
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for createAppd monitoring source Validation in create mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main tabWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_setup-sources_0"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="0"
          id="bp3-tab-title_setup-sources_0"
          role="tab"
          tabindex="0"
        >
          Tab1
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_setup-sources_0"
        class="bp3-tab-panel"
        id="bp3-tab-panel_setup-sources_0"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main formFullheight"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  cv.healthSource.connectors.AppDynamics.applicationsAndTiers
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <div
                        class="bp3-form-group bp3-intent-danger applicationDropdown"
                        data-id="appdApplication-0"
                      >
                        <label
                          class="bp3-label"
                          for="appdApplication"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="appDHealthSourceform_appdApplication"
                          >
                            cv.healthSource.connectors.AppDynamics.applicationLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group bp3-intent-danger"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-search StyledProps--main"
                                      icon="search"
                                    >
                                      <svg
                                        data-icon="search"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          search
                                        </desc>
                                        <path
                                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="appdApplication"
                                  placeholder="- cv.healthSource.connectors.AppDynamics.applicationPlaceholder -"
                                  style="padding-left: 0px; padding-right: 0px;"
                                  type="text"
                                  value=""
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-cross StyledProps--main"
                                      icon="cross"
                                    >
                                      <svg
                                        data-icon="cross"
                                        height="15"
                                        viewBox="0 0 16 16"
                                        width="15"
                                      >
                                        <desc>
                                          cross
                                        </desc>
                                        <path
                                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="FormError--errorDiv"
                            >
                              <span
                                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                data-icon="circle-cross"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 13 13"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <span
                                class="FormError--error"
                              >
                                cv.healthSource.connectors.AppDynamics.validation.application
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  metricPacks
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      cv.healthSource.connectors.AppDynamics.metricPackLabel
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="metricData.Errors-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="StyledProps--font StyledProps--main metricPack"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="metricData.Errors-2"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <label
                                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                >
                                  <input
                                    name="metricData.Errors"
                                    type="checkbox"
                                  />
                                  <span
                                    class="bp3-control-indicator"
                                  />
                                  <span
                                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                    data-tooltip-id="appDHealthSourceform_metricData.Errors"
                                  >
                                    Errors
                                  </span>
                                </label>
                              </div>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="metricData.Performance-3"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <label
                                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                >
                                  <input
                                    name="metricData.Performance"
                                    type="checkbox"
                                  />
                                  <span
                                    class="bp3-control-indicator"
                                  />
                                  <span
                                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                    data-tooltip-id="appDHealthSourceform_metricData.Performance"
                                  >
                                    Performance
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main footerCta footer"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    submit
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
